--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,18 +1,17 @@
----
-
----
-
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>About - My Astro Site</title>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <h1>Astro</h1>
+    <h1>About Me</h1>
+    <h2>...and my new astro page</h2>
+    <p>I am working thorough the tutorial.</p>
   </body>
 </html>
