Add blog page and update navigation links

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,8 +12,8 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
-    <h1>About Me</h1>
-    <h2>...and my new astro page</h2>
-    <p>I am working thorough the tutorial.</p>
+    <h1>My Astro Site</h1>
+    <h1>My Astro Learning Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
