--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/navigation.astro";
 import "../styles/global.css";
 const pageTitle = "My Astro Blog";
 ---
@@ -13,9 +14,7 @@ const pageTitle = "My Astro Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
 
     <h1>{pageTitle}</h1>
     <h2>My Astro Learning Blog</h2>
