--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from "../components/navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 const pageTitle = "Home page";
 ---
@@ -14,7 +15,7 @@ const pageTitle = "Home page";
   </head>
   <body>
     <Navigation />
-
     <h1>{pageTitle}</h1>
+    <Footer />
   </body>
 </html>
