--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
-import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
+import Header from "../components/Header.astro";
 const pageTitle = "My Astro Blog";
 ---
 
@@ -15,7 +15,7 @@ const pageTitle = "My Astro Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
     <h2>My Astro Learning Blog</h2>
