--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -80,4 +80,7 @@ const textCase = "uppercase";
     }
     <Footer />
   </body>
+  <script>
+    import "../scripts/menu.js";
+  </script>
 </html>
