--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -26,5 +26,8 @@ const pageTitle = "My Astro Blog";
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
