Refactor page layouts to use BaseLayout component and streamline HTML structure

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,3 +74,8 @@ h1 {
     display: none;
   }
 }
+.skill {
+  color: var(--skillColor);
+  font-weight: var(--fontWeight);
+  text-transform: var(--textCase);
+}
