Remove redundant style definitions in about.astro and ensure h1 color is set in global.css

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,12 +17,7 @@ const textCase = "uppercase";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <style is:global define:vars={{ skillColor, fontWeight, textCase }}>
-    h1 {
-      color: purple;
-      font-size: 4rem;
-    }
-  </style>
+  <style is:global define:vars={{ skillColor, fontWeight, textCase }}></style>
   <h2>...and my new astro page</h2>
   <p>I am working thorough the tutorial.</p>
   <p>Here are a few facts about me:</p>
