--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,20 @@
 ---
 import Menu from "./Menu.astro";
 import Navigation from "./Navigation.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
   <nav>
+    <ThemeIcon />
     <Menu />
     <Navigation />
   </nav>
 </header>
+<style>
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+</style>
